--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,9 +14,9 @@
             "program": "hw2.py",
             // "program": "hw1_jiean.py",
             "args": [
-                // "weights", "data",
+                "weights", "data",
                 // "weights", "data_anno",
-                "pos/train.weights", "pos/test",
+                // "pos/train.weights", "pos/test",
             ]
         }
     ]
